[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Circle.png" type="Texture" id=1]
[ext_resource path="res://foes/Dropper/DroppedBomb.gd" type="Script" id=2]
[ext_resource path="res://foes/Dropper/Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.025

[sub_resource type="CircleShape2D" id=2]
radius = 23.1948

[node name="DroppedBomb" type="KinematicBody2D"]
collision_layer = 32768
collision_mask = 32768
script = ExtResource( 2 )
exposion = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.439216, 0.439216, 0.439216, 1 )
scale = Vector2( 0.092, 0.092 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 31, 0 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
